Fixed spelling mistake, added collections

--- a/_posts/2025-09-01-cars.markdown
+++ b/_posts/2025-09-01-cars.markdown
@@ -12,7 +12,7 @@ Then came 'William', Mike Thompson's black 1958 Morris Oxford. Baby Captain on t
 
 Claire's Triumph 2000. Andrew replaced the frost plug in the block on the right hand side. It overheated on Sarah. Put a self tapping screw in the hole. 
 
-Followed by a little yellow mini clubman. Great car but always going to be too small for Sarah, John, Captain, & Hazel. Dropped Andrew and Steve Thompson (Napier, Andrew's flatmate) up at Whakapapa. The throttlke cable came out of the carburettor and the poor little thing would only run at full revs. It had chains and it's little front wheels were going flat out. Road closed behind us and we all stayed in the Manawatu Tramping Hut. Sarah and I went skiing the next day - the weather was gorgeous. Dave MacDonald's wife was up there, having an affair with the Swiss? ski instructor.
+Followed by a little yellow mini clubman. Great car but always going to be too small for Sarah, John, Captain, & Hazel. Dropped Andrew and Steve Thompson (Napier, Andrew's flatmate) up at Whakapapa. The throttle cable came out of the carburettor and the poor little thing would only run at full revs. It had chains and it's little front wheels were going flat out. Road closed behind us and we all stayed in the Manawatu Tramping Hut. Sarah and I went skiing the next day - the weather was gorgeous. Dave MacDonald's wife was up there, having an affair with the Swiss? ski instructor.
 
 Newish Ford Laser for working with Combined Insurance.
 
